Very large refactor & optimization of code
Also added variable villager heights