@@ -17,9 +17,9 @@ import mca.chore.ChoreFishing;
 import mca.chore.ChoreHunting;
 import mca.chore.ChoreMining;
 import mca.chore.ChoreWoodcutting;
+import mca.core.Constants;
 import mca.core.MCA;
 import mca.core.io.WorldPropertiesManager;
-import mca.core.util.Color;
 import mca.core.util.LanguageHelper;
 import mca.core.util.LogicHelper;
 import mca.core.util.PacketHelper;
@@ -87,6 +87,8 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 	private GuiButton inventoryButton;
 
 	//Buttons for hiring.
+	/** Acts as a label to show how many hours are selected. */
+	@SuppressWarnings("unused")
 	private GuiButton hoursButton;
 	private GuiButton hoursIncreaseButton;
 	private GuiButton hoursDecreaseButton;
@@ -327,14 +329,14 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 				//Draw (Peasant) beside their name if this is the owner player.
 				if (entityVillager.monarchPlayerName.equals(player.username))
 				{
-					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.instance.getIdOfPlayer(player), true) + " " + LanguageHelper.getString("monarch.title.peasant." + entityVillager.gender.toLowerCase() + ".owner"), width / 2, height / 2 - 80, 0xffffff);
+					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.getInstance().getIdOfPlayer(player), true) + " " + LanguageHelper.getString("monarch.title.peasant." + entityVillager.getGenderAsString() + ".owner"), width / 2, height / 2 - 80, 0xffffff);
 				}
 
 				//Else draw (Peasant of %Name%) below their name.
 				else
 				{
-					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.instance.getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
-					drawCenteredString(fontRenderer, LanguageHelper.getString(entityVillager, "monarch.title.peasant." + entityVillager.gender.toLowerCase() + ".otherplayer", false), width / 2, height / 2 - 60, 0xffffff);
+					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.getInstance().getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
+					drawCenteredString(fontRenderer, LanguageHelper.getString(entityVillager, "monarch.title.peasant." + entityVillager.getGenderAsString() + ".otherplayer", false), width / 2, height / 2 - 60, 0xffffff);
 				}
 			}
 
@@ -344,14 +346,14 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 				//Draw (Knight of %Name%) below their name if this is NOT the owner player.
 				if (!entityVillager.monarchPlayerName.equals(player.username))
 				{
-					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.instance.getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
-					drawCenteredString(fontRenderer, LanguageHelper.getString(entityVillager, "monarch.title.knight." + entityVillager.gender.toLowerCase() + ".otherplayer", false), width / 2, height / 2 - 60, 0xffffff);
+					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.getInstance().getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
+					drawCenteredString(fontRenderer, LanguageHelper.getString(entityVillager, "monarch.title.knight." + entityVillager.getGenderAsString() + ".otherplayer", false), width / 2, height / 2 - 60, 0xffffff);
 				}
 
 				//Else draw their title like normal. It will be changed to Knight.
 				else
 				{
-					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.instance.getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
+					drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.getInstance().getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
 				}
 			}
 
@@ -359,18 +361,18 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 			else if (entityVillager.playerMemoryMap.get(player.username).isHired)
 			{
 				PlayerMemory memory = entityVillager.playerMemoryMap.get(player.username);
-				drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.instance.getIdOfPlayer(player), true) + " " + LanguageHelper.getString("gui.title.special.hired"), width / 2, height / 2 - 80, 0xffffff);
+				drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.getInstance().getIdOfPlayer(player), true) + " " + LanguageHelper.getString("gui.title.special.hired"), width / 2, height / 2 - 80, 0xffffff);
 
 				if (!inSpecialGui)
 				{
-					drawCenteredString(fontRenderer, LanguageHelper.getString("gui.info.hire.minutesremaining").replace("%x%", new Integer((memory.hoursHired * 60) - memory.minutesSinceHired).toString()), width / 2, height / 2, 0xffffff);
+					drawCenteredString(fontRenderer, LanguageHelper.getString("gui.info.hire.minutesremaining").replace("%x%", Integer.valueOf((memory.hoursHired * 60) - memory.minutesSinceHired).toString()), width / 2, height / 2, 0xffffff);
 				}
 			}
 
 			//They're not hired by this player. Draw their title like normal.
 			else
 			{
-				drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.instance.getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
+				drawCenteredString(fontRenderer, entityVillager.getTitle(MCA.getInstance().getIdOfPlayer(player), true), width / 2, height / 2 - 80, 0xffffff);
 			}
 
 
@@ -383,7 +385,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 			if (spouse != null)
 			{
 				//If they have a villager spouse and the player is related, then draw (Married to %SpouseRelation% %SpouseName%.)
-				if (entityVillager.isMarried && spouse.familyTree.idIsRelative(MCA.instance.getIdOfPlayer(player)))
+				if (entityVillager.isMarried && spouse.familyTree.idIsRelative(MCA.getInstance().getIdOfPlayer(player)))
 				{
 					drawCenteredString(fontRenderer, LanguageHelper.getString(player, entityVillager, "gui.info.family.spouse", false), width / 2 , height / 2 - 60, 0xffffff);
 				}
@@ -467,7 +469,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 			if (inHiringGui)
 			{
-				drawCenteredString(fontRenderer, LanguageHelper.getString("gui.info.hire.price").replace("%x%", new Integer(hiringHours).toString()), width / 2, 80, 0xffffff);
+				drawCenteredString(fontRenderer, LanguageHelper.getString("gui.info.hire.price").replace("%x%", String.valueOf(hiringHours)), width / 2, 80, 0xffffff);
 
 				boolean hasGold = false;
 
@@ -489,13 +491,13 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 				if (hasGold)
 				{
-					drawCenteredString(fontRenderer, Color.GREEN + LanguageHelper.getString("gui.info.hire.hasgold"), width / 2, 95, 0xffffff);
+					drawCenteredString(fontRenderer, Constants.COLOR_GREEN + LanguageHelper.getString("gui.info.hire.hasgold"), width / 2, 95, 0xffffff);
 					hireButton.enabled = true;
 				}
 
 				else
 				{
-					drawCenteredString(fontRenderer, Color.RED + LanguageHelper.getString("gui.info.hire.notenoughgold"), width / 2, 95, 0xffffff);
+					drawCenteredString(fontRenderer, Constants.COLOR_RED + LanguageHelper.getString("gui.info.hire.notenoughgold"), width / 2, 95, 0xffffff);
 					hireButton.enabled = false;
 				}
 			}
@@ -581,7 +583,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 			buttonList.add(takeGiftButton = new GuiButton(8, width / 2 - 60, height / 2 - 20, 120, 20, LanguageHelper.getString("gui.button.interact.takegift")));
 		}
 
-		if (MCA.instance.playerWorldManagerMap.get(player.username).worldProperties.isMonarch)
+		if (MCA.getInstance().playerWorldManagerMap.get(player.username).worldProperties.isMonarch)
 		{
 			if (entityVillager.getProfession() != 5)
 			{
@@ -620,7 +622,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 		buttonList.add(greetButton = new GuiButton(4, width / 2 - 30, height / 2 + 20, 60, 20, LanguageHelper.getString("gui.button.interact.greet")));
 		buttonList.add(tellStoryButton = new GuiButton(5, width / 2 - 30, height / 2 + 40, 60, 20, LanguageHelper.getString("gui.button.interact.tellstory")));
 
-		EnumRelation relationToPlayer = entityVillager.familyTree.getRelationTo(MCA.instance.getIdOfPlayer(player));
+		EnumRelation relationToPlayer = entityVillager.familyTree.getRelationTo(MCA.getInstance().getIdOfPlayer(player));
 
 		if (relationToPlayer == EnumRelation.None || relationToPlayer == EnumRelation.Spouse)
 		{
@@ -663,7 +665,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 		buttonList.add(adoptBabyButton     = new GuiButton(4, width / 2 - 125, height / 2 + 30, 85, 20, LanguageHelper.getString("gui.button.special.priest.adoptbaby")));
 		buttonList.add(arrangedMarriageButton = new GuiButton(5, width / 2 - 40, height / 2 + 30, 120, 20, LanguageHelper.getString("gui.button.special.priest.arrangedmarriage")));
 
-		WorldPropertiesManager manager = MCA.instance.playerWorldManagerMap.get(Minecraft.getMinecraft().thePlayer.username);
+		WorldPropertiesManager manager = MCA.getInstance().playerWorldManagerMap.get(Minecraft.getMinecraft().thePlayer.username);
 		divorceSpouseButton.enabled = manager.worldProperties.playerSpouseID != 0;
 		giveUpBabyButton.enabled = manager.worldProperties.babyExists;
 		arrangedMarriageButton.enabled = manager.worldProperties.playerSpouseID == 0;
@@ -1095,7 +1097,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 		buttonList.add(makePeasantButton = new GuiButton(3, width / 2 - 60, height / 2 + 20, 120, 20, LanguageHelper.getString("monarch.gui.button.interact.makepeasant")));
 		buttonList.add(makeKnightButton  = new GuiButton(4, width / 2 - 60, height / 2 + 40, 120, 20, LanguageHelper.getString("monarch.gui.button.interact.makeknight")));
 
-		demandGiftButton.enabled = MCA.instance.modPropertiesManager.modProperties.server_allowDemandGift;
+		demandGiftButton.enabled = MCA.getInstance().modPropertiesManager.modProperties.server_allowDemandGift;
 
 		if (entityVillager.profession == 5)
 		{
@@ -1136,7 +1138,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 		else if (button == followButton)
 		{
-			if (!entityVillager.isSpouse || (entityVillager.isSpouse && entityVillager.familyTree.idIsRelative(MCA.instance.getIdOfPlayer(player))))
+			if (!entityVillager.isSpouse || (entityVillager.isSpouse && entityVillager.familyTree.idIsRelative(MCA.getInstance().getIdOfPlayer(player))))
 			{
 				if (entityVillager.profession == 5)
 				{
@@ -1260,7 +1262,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 		else if (button == stayButton)
 		{
-			if (!entityVillager.isSpouse || (entityVillager.isSpouse && entityVillager.familyTree.idIsRelative(MCA.instance.getIdOfPlayer(player))))
+			if (!entityVillager.isSpouse || (entityVillager.isSpouse && entityVillager.familyTree.idIsRelative(MCA.getInstance().getIdOfPlayer(player))))
 			{
 				entityVillager.isStaying = !entityVillager.isStaying;
 				entityVillager.isFollowing = false;
@@ -1281,7 +1283,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 		else if (button == setHomeButton)
 		{
-			if (!entityVillager.isSpouse || (entityVillager.isSpouse && entityVillager.familyTree.idIsRelative(MCA.instance.getIdOfPlayer(player))))
+			if (!entityVillager.isSpouse || (entityVillager.isSpouse && entityVillager.familyTree.idIsRelative(MCA.getInstance().getIdOfPlayer(player))))
 			{
 				entityVillager.homePointX = entityVillager.posX;
 				entityVillager.homePointY = entityVillager.posY;
@@ -1321,12 +1323,12 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 		else if (button == takeArrangerRingButton)
 		{
-			WorldPropertiesManager manager = MCA.instance.playerWorldManagerMap.get(Minecraft.getMinecraft().thePlayer.username);
+			WorldPropertiesManager manager = MCA.getInstance().playerWorldManagerMap.get(Minecraft.getMinecraft().thePlayer.username);
 
 			entityVillager.hasArrangerRing = false;
 
 			PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(entityVillager.entityId, "hasArrangerRing", false));
-			PacketDispatcher.sendPacketToServer(PacketHelper.createDropItemPacket(entityVillager.entityId, MCA.instance.itemArrangersRing.itemID, 1));
+			PacketDispatcher.sendPacketToServer(PacketHelper.createDropItemPacket(entityVillager.entityId, MCA.getInstance().itemArrangersRing.itemID, 1));
 			manager.worldProperties.arrangerRingHolderID = 0;
 			manager.saveWorldProperties();
 			close();
@@ -1498,7 +1500,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 	 */
 	private void actionPerformedPriest(GuiButton button)
 	{
-		WorldPropertiesManager manager = MCA.instance.playerWorldManagerMap.get(Minecraft.getMinecraft().thePlayer.username);
+		WorldPropertiesManager manager = MCA.getInstance().playerWorldManagerMap.get(Minecraft.getMinecraft().thePlayer.username);
 
 		if (button == divorceSpouseButton)
 		{
@@ -1517,7 +1519,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 				{
 					EntityVillagerAdult spouse = null;
 
-					for (AbstractEntity entity : MCA.instance.entitiesMap.values())
+					for (AbstractEntity entity : MCA.getInstance().entitiesMap.values())
 					{
 						if (entity.mcaID == manager.worldProperties.playerSpouseID)
 						{
@@ -1533,7 +1535,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 				}
 			}
 
-			catch (Throwable e)
+			catch (Exception e)
 			{
 				//The spouse wasn't found in the entities map for some reason. Just reset the player's spouse ID.
 				manager.worldProperties.playerSpouseID = 0;
@@ -1546,7 +1548,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 		else if (button == divorceCoupleButton)
 		{
-			player.openGui(MCA.instance, MCA.instance.guiSpecialDivorceCoupleID, player.worldObj, (int)player.posX, (int)player.posY, (int)player.posZ);
+			player.openGui(MCA.getInstance(), Constants.ID_GUI_DIVORCECOUPLE, player.worldObj, (int)player.posX, (int)player.posY, (int)player.posZ);
 		}
 
 		else if (button == giveUpBabyButton)
@@ -1554,7 +1556,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 			manager.worldProperties.babyExists = false;
 			manager.worldProperties.babyName = "";
 			manager.worldProperties.babyReadyToGrow = false;
-			manager.worldProperties.babyGender = "";
+			manager.worldProperties.babyIsMale = false;
 			manager.worldProperties.minutesBabyExisted = 0;
 
 			entityVillager.notifyPlayer(player, LanguageHelper.getString("notify.baby.gaveup"));
@@ -1576,22 +1578,24 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 				manager.worldProperties.minutesBabyExisted = 0;
 				manager.worldProperties.babyReadyToGrow = false;
 
-				if (AbstractEntity.getRandomGender().equals("Male"))
+				boolean isMale = AbstractEntity.getRandomGender();
+				
+				if (isMale)
 				{
-					manager.worldProperties.babyName = AbstractEntity.getRandomName("Male");
+					manager.worldProperties.babyName = AbstractEntity.getRandomName(isMale);
 					entityVillager.say(LanguageHelper.getString(player, "priest.adopt.male"));
 
-					player.inventory.addItemStackToInventory(new ItemStack(MCA.instance.itemBabyBoy, 1));
-					PacketDispatcher.sendPacketToServer(PacketHelper.createAddItemPacket(MCA.instance.itemBabyBoy.itemID, player.entityId));
+					player.inventory.addItemStackToInventory(new ItemStack(MCA.getInstance().itemBabyBoy, 1));
+					PacketDispatcher.sendPacketToServer(PacketHelper.createAddItemPacket(MCA.getInstance().itemBabyBoy.itemID, player.entityId));
 				}
 
 				else
 				{
-					manager.worldProperties.babyName = AbstractEntity.getRandomName("Female");
+					manager.worldProperties.babyName = AbstractEntity.getRandomName(isMale);
 					entityVillager.say(LanguageHelper.getString(player, "priest.adopt.female"));
 
-					player.inventory.addItemStackToInventory(new ItemStack(MCA.instance.itemBabyGirl, 1));
-					PacketDispatcher.sendPacketToServer(PacketHelper.createAddItemPacket(MCA.instance.itemBabyGirl.itemID, player.entityId));
+					player.inventory.addItemStackToInventory(new ItemStack(MCA.getInstance().itemBabyGirl, 1));
+					PacketDispatcher.sendPacketToServer(PacketHelper.createAddItemPacket(MCA.getInstance().itemBabyGirl.itemID, player.entityId));
 				}
 
 				manager.saveWorldProperties();
@@ -1610,7 +1614,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 
 			for (EntityVillagerAdult adult : nearbyVillagers)
 			{
-				if (adult.gender.equals(preferredGender))
+				if (adult.getGenderAsString().equals(preferredGender))
 				{
 					if (AbstractEntity.getBooleanWithProbability(30))
 					{
@@ -1634,7 +1638,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 				villagerToMarry.spousePlayerName = player.username;
 				villagerToMarry.familyTree.addFamilyTreeEntry(player, EnumRelation.Spouse);
 
-				player.triggerAchievement(MCA.instance.achievementGetMarried);
+				player.triggerAchievement(MCA.getInstance().achievementGetMarried);
 
 				manager.worldProperties.playerSpouseID = villagerToMarry.mcaID;
 				manager.saveWorldProperties();
@@ -1647,7 +1651,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 				PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(villagerToMarry.entityId, "isSpouse", true));
 				PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(villagerToMarry.entityId, "spousePlayerName", player.username));
 				PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(villagerToMarry.entityId, "marriageToPlayerWasArranged", true));
-				PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.instance.achievementGetMarried, player.entityId));
+				PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.getInstance().achievementGetMarried, player.entityId));
 
 				villagerToMarry.setPosition(player.posX, player.posY, player.posZ);
 				PacketDispatcher.sendPacketToServer(PacketHelper.createPositionPacket(villagerToMarry, player.posX, player.posY, player.posZ));
@@ -2010,7 +2014,7 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 		if (button == openSetupButton)
 		{
 			mc.displayGuiScreen(null);
-			player.openGui(MCA.instance, MCA.instance.guiSetupID, player.worldObj, (int)entityVillager.posX, (int)entityVillager.posY, (int)entityVillager.posZ);
+			player.openGui(MCA.getInstance(), Constants.ID_GUI_SETUP, player.worldObj, (int)entityVillager.posX, (int)entityVillager.posY, (int)entityVillager.posZ);
 		}
 	}
 
@@ -2462,12 +2466,12 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 					entityVillager.modifyHearts(player, -30);
 
 					//Update stats and check for achievement.
-					WorldPropertiesManager manager = MCA.instance.playerWorldManagerMap.get(player.username);
+					WorldPropertiesManager manager = MCA.getInstance().playerWorldManagerMap.get(player.username);
 					manager.worldProperties.stat_villagersExecuted++;
 					manager.saveWorldProperties();
 
-					player.triggerAchievement(MCA.instance.achievementExecuteVillager);
-					PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.instance.achievementExecuteVillager, player.entityId));
+					player.triggerAchievement(MCA.getInstance().achievementExecuteVillager);
+					PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.getInstance().achievementExecuteVillager, player.entityId));
 
 					PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(entityVillager.entityId, "hasBeenExecuted", entityVillager.hasBeenExecuted));
 					close();
@@ -2557,20 +2561,20 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 					entityVillager.monarchPlayerName = player.username;
 
 					//Update stats and check for achievement.
-					WorldPropertiesManager manager = MCA.instance.playerWorldManagerMap.get(player.username);
+					WorldPropertiesManager manager = MCA.getInstance().playerWorldManagerMap.get(player.username);
 					manager.worldProperties.stat_villagersMadePeasants++;
 					manager.saveWorldProperties();
 
 					if (manager.worldProperties.stat_villagersMadePeasants >= 20)
 					{
-						player.triggerAchievement(MCA.instance.achievementPeasantArmy);
-						PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.instance.achievementPeasantArmy, player.entityId));
+						player.triggerAchievement(MCA.getInstance().achievementPeasantArmy);
+						PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.getInstance().achievementPeasantArmy, player.entityId));
 					}
 
 					player.addChatMessage(LanguageHelper.getString("monarch.makepeasant.success"));
 
-					player.triggerAchievement(MCA.instance.achievementMakePeasant);
-					PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.instance.achievementMakePeasant, player.entityId));
+					player.triggerAchievement(MCA.getInstance().achievementMakePeasant);
+					PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.getInstance().achievementMakePeasant, player.entityId));
 					PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(entityVillager.entityId, "isPeasant", entityVillager.isPeasant));
 					PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(entityVillager.entityId, "monarchPlayerName", entityVillager.monarchPlayerName));
 					close();
@@ -2600,20 +2604,20 @@ public class GuiInteractionVillagerAdult extends AbstractGui
 					entityVillager.monarchPlayerName = player.username;
 
 					//Update stats and check for achievement.
-					WorldPropertiesManager manager = MCA.instance.playerWorldManagerMap.get(player.username);
+					WorldPropertiesManager manager = MCA.getInstance().playerWorldManagerMap.get(player.username);
 					manager.worldProperties.stat_guardsMadeKnights++;
 					manager.saveWorldProperties();
 
 					if (manager.worldProperties.stat_guardsMadeKnights >= 20)
 					{
-						player.triggerAchievement(MCA.instance.achievementMakeKnight);
-						PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.instance.achievementKnightArmy, player.entityId));
+						player.triggerAchievement(MCA.getInstance().achievementMakeKnight);
+						PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.getInstance().achievementKnightArmy, player.entityId));
 					}
 
 					player.addChatMessage(LanguageHelper.getString("monarch.makeknight.success"));
 
-					player.triggerAchievement(MCA.instance.achievementMakeKnight);
-					PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.instance.achievementMakeKnight, player.entityId));
+					player.triggerAchievement(MCA.getInstance().achievementMakeKnight);
+					PacketDispatcher.sendPacketToServer(PacketHelper.createAchievementPacket(MCA.getInstance().achievementMakeKnight, player.entityId));
 					PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(entityVillager.entityId, "isKnight", entityVillager.isKnight));
 					PacketDispatcher.sendPacketToServer(PacketHelper.createFieldValuePacket(entityVillager.entityId, "monarchPlayerName", entityVillager.monarchPlayerName));
 					close();
